@@ -12,8 +12,6 @@ import org.arieled91.hayequipo.game.model.dto.JoinRequest;
 import org.arieled91.hayequipo.game.repository.GameRepository;
 import org.arieled91.hayequipo.game.repository.PlayerRepository;
 import org.jetbrains.annotations.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -22,6 +20,7 @@ import org.springframework.stereotype.Service;
 import javax.transaction.Transactional;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -138,7 +137,7 @@ public class GameService {
     }
 
     public List<Game> findByDate(@Nullable LocalDate date){
-        return date !=null ? gameRepository.findByDate(date) : List.of();
+        return date !=null ? gameRepository.findByDate(date) : Collections.emptyList();
     }
     public Optional<Game> findById(Long id){
         return gameRepository.findById(id);
